pipeline-test/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipeline-test
  namespace: pipeline-test
  labels:
    app: pipeline-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pipeline-test
  template:
    metadata:
      labels:
        app: pipeline-test
    spec:
      containers:
      - name: pipeline-test
        image: random
        ports:
        - containerPort: 3000
