pipeline-test/app_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipeline-test-svc
  namespace: pipeline-test
spec:
  selector:
    app: pipeline-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
